# signomial

./: .gitignore  pyproject.toml
radius/: dichotomy.py  hyperopt_optimization.py  solve_gp.py  solve_signomial.py
radius2/: solve_gp.py  solve_signomial.py
radius2/approximation/: gaussian_quantile_approximation.py  generate_catalan_sequence.py  inverse_erf_taylor_series.py
